# openjob

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  openjob-dev.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260402_01_initial_control_plane.py  20260403_02_job_relevance_engine_foundation.py  20260408_03_persist_normalized_job_urls.py  20260408_04_source_auto_sync_controls.py  20260409_05_application_accounts.py  20260409_06_github_link_compatibility.py  20260410_07_question_aliases.py  20260416_08_system_events.py  20260418_09_placeholder_text.py  20260419_10_required_on_question_tasks.py
backend/app/: __init__.py  celery_app.py  config.py  main.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/domains/: __init__.py
backend/app/integrations/: browser_context.py
backend/app/tasks/: applications.py  discovery.py  job_relevance.py  linkedin.py  role_profile_expansion.py
backend/openjob_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_health.py  test_sqlite_session_config.py  test_startup_db_readiness.py
backend/tests/domains/: test_action_needed_routes.py  test_answer_routes.py  test_application_account_routes.py  test_application_account_service.py  test_application_log_routes.py  test_application_service.py  test_application_trigger_routes.py  test_deduplication.py  test_job_deduplication.py  test_job_relevance_models.py  test_job_relevance_routes.py  test_job_relevance_service.py  test_source_routes.py  (+12 more)
(+133 files in other folders)
