[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjob-backend"
version = "0.1.0"
description = "OpenJob FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "celery[redis]>=5.5.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "itsdangerous>=2.2.0",
  "openai>=1.109.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
